--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,9 +1,18 @@
 @book{chartrand,
-author="Chartrand, Gary and Zhang, Ping",
-title="A First Course in Graph Theory",
-publisher="Dover Publications",
-address="Mineola, New York",
-year=2012
+author={Chartrand, Gary and Zhang, Ping},
+title={A First Course in Graph Theory},
+publisher={Dover Publications},
+address={Mineola, New York},
+year={2012}
+}
+
+@book{west,
+author={West, Douglas B.},
+title={Introduction to Graph Theory},
+edition={\(2^{nd}\)},
+publisher={Prentice Hall},
+address={Upper Saddle River, NJ},
+year={2001}
 }
 
 @article{hopcroft,
