--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -1407,10 +1407,11 @@ condition for the proposed algorithm.
 
 \subsubsection{Trees}
 
-A \emph{tree} is a connected graph that contains no cycles.  Typically, one vertex of the tree is selected as the
-\emph{root} vertex and then the tree is depicted in layers that contain vertices that are equidistant from the root
-vertex.  Note that the bottom layer is composed entirely of pendant vertices, but pendant vertices can exist in the
-other layers as well.  Such pendant vertices are usually referred to as \emph{leaves} in this context.
+A \emph{tree} is a connected graph that contains no cycles as subgraphs.  Typically, one vertex of the tree is
+selected as the \emph{root} vertex and then the tree is depicted in layers that contain vertices that are
+equidistant from the root vertex.  Note that the bottom layer is composed entirely of pendant vertices, but pendant
+vertices can exist in the other layers as well.  Such pendant vertices are usually referred to as \emph{leaves} in
+this context.
 
 An example tree is shown in Figure \ref{fig:tree}.  The root vertex \(r\) is shown in red and the leaf vertices
 \(b,e,g,h,i,j,k\) are shown in green.
