--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -1055,7 +1055,7 @@ number the components from left-to-right:
   \X(G_1)=3 \\
   \X(G_2)=2 \\
   \\
-  \X(G)=\max(3,2)=3
+  \X(G)=\max\{3,2\}=3
 \end{gather*}
 
 Using this technique requires application of an initial algorithm to partition the graph into components.  Such an
