--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -15,7 +15,7 @@
 \newtheorem{proposition}{Proposition}
 \begin{document}
 
-\title{Two Graph Vertex Partitioning Algorithms for Part Consolidation in Axiomatic Design}
+\title{Determining a Graph's Chromatic Number for Part Consolidation in Axiomatic Design}
 \author{Jeffery A. Cavallaro\\
   Graduate Student\\
   Mathematics Department\\
